--- a/jenkins/deploy.yaml
+++ b/jenkins/deploy.yaml
@@ -1,4 +1,9 @@
 apiVersion: v1
+kind: namespace
+metadata:
+  name: qa
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: jenkins
@@ -48,7 +53,7 @@ spec:
             timeoutSeconds: 1
           volumeMounts:
             - name: jenkins-volume
-              path: /var/jenkins_home
+              mountPath: /var/jenkins_home
       volumes:
         - name: jenkins-volume
           hostPath:
